# binapi

./: CMakeLists.txt
include/binapi/: flatjson.hpp
src/: api.cpp
